--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 /* circle position on overlay */
 .crash, .crash svg {
   position: absolute;
+  width: 20px;
+  height: 20px;
 }
 
 /* circle attribute */
