--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
   stroke-width: 0.5px;
 }
 
+ h2,h4{
+  text-align: center;
+}
 </style>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFrhgjCQZ2PFopQA00L-yh8aknCBN2v74">  </script>
@@ -53,6 +56,9 @@
 </head>
 
 <body>
+  <h2>TITLE</h2>
+  <h4>SUBTITLE</h4>
+  <p>DROP DOWN SECTION</p>
 <div style="width:100%; overflow:hidden;">
   <div id="map"></div>
   <div id="div2">
@@ -160,5 +166,6 @@ d3.csv("autodata_select.csv", function(error,data){
 
 
 </script>
+  <p>SLIDER TIMELINE</p>
   </body>
 </html>
