--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@ h2,h4{
   text-align: center;
 }
 
+select { 
+  position: absolute; 
+  left: 50px; 
+  top: 80px; 
+ }
+  
 </style>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFrhgjCQZ2PFopQA00L-yh8aknCBN2v74">  </script>
@@ -119,7 +125,17 @@ d3.csv("autodata_select.csv", function(error,data){
 
       ppl.push([d.index,d.gender,d.age]);
     })
-
+  
+    var selector = d3.select("body")
+  		.append("select")
+  		.attr("id", "weekday")
+  		.selectAll("option")
+  		.data(data)
+  		.enter().append("option")
+  		.text(function(d) { return d.Day; })
+  		.attr("value", function (d, i) {
+  			return i;
+  		});
   //create overlay; overlay is the layer over the google map
 
   var overlay= new google.maps.OverlayView();
