--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ var map = new google.maps.Map(d3.select("#map").node(), {
 
 
 //load data
-d3.csv("autodata_select.csv", function(error,data){
+d3.csv("output_filtered_2015_to_2018.csv", function(error,data){
   if (error) throw error;
 
   data.forEach(function(d){
