--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ select {
   <h4>SUBTITLE</h4>
 
 
-// This is our calendar inputs for filtering
+/*This is our calendar inputs for filtering*/
   <div align ="center">
 From : <input type="date" name="date1" id="date1"  value="2018-06-01" min="2018-01-01" max="2019-12-31" />
 To :   <input type="date" name="date1" id="date2" value="2019-06-01" min="2018-01-01" max="2019-12-31" /><br /><br />
