--- a/index.html
+++ b/index.html
@@ -128,6 +128,21 @@ function render(filterByDates) {
   }
 }
 
+// Action for Submit button; Shuennhau only knows how
+// to filter this way for now. Need to figure out to
+// extract dates from "myData"
+// Currently we can see the fitler in action: filtering out
+// Saturdays
+d3.select('#submit')
+  .on("click", function(data){
+      d3.selectAll("circle")
+        .transition()
+        .duration(10)
+        .filter(function(d){return d.Day =="SATURDAY"})
+          //.style("fill", "lightblue")
+          .attr("r",0);
+  })
+
 var ppl=[];
 
 //Just to see if drop down menu works, can delete later
