--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ d3.select('#submit')
       d3.selectAll("circle")
         .transition()
         .duration(10)
-        .filter(function(d){return d.Day =="SATURDAY"})
+        .filter(function(d){return d.Day =="SATURDAY";})
           //.style("fill", "lightblue")
           .attr("r",0);
   })
