--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ select {
   <div align ="center">
 From : <input type="date" name="date1" id="date1"  value="2015-01-01" min="2015-01-01" max="2018-12-31" />
 To :   <input type="date" name="date1" id="date2" value="2018-12-31" min="2015-01-01" max="2018-12-31" /><br /><br />
-<input type="button" onclick="render(true)" value="Submit" />
+<input id='submit' type="button" onclick="render(true)" value="Submit" />
 </div>
 
 <div style="width:100%; overflow:hidden;">
