--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ To :   <input type="date" name="date1" id="date2" value="2018-12-31" min="2015-0
 
 <script src="bars.js"></script>
 <script src="week_bars.js"></script>
-<script src="UpdateCharts.js"></script>
+<script src="UpdatingCharts.js"></script>
 
 <script>
 
