--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ from: http://www.bmdata.co.uk/effective/index_map.html
 
 var map = new google.maps.Map(d3.select("#map").node(), {
   zoom: 10,
+  draggableCursor: 'crosshair',
   center: new google.maps.LatLng(39.85, -86.15),
   mapTypeId: google.maps.MapTypeId.ROADMAP
   });
