--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
@@ -248,7 +249,7 @@ var map = new google.maps.Map(d3.select("#map").node(), {
                 tooltip.transition()
                     .duration(200)
                     .style("opacity", .9);
-                tooltip.html("Date: "+parseDateCSV(d.Date)+"<br>"+"Gender: "+d.Gender)
+                tooltip.html("Date: "+(d.Date)+ " Time: "+d.TimeAP+"<br>"+"Age: "+d.Age+"<br>"+"Gender: "+d.Gender)
                     .style("left", (d3.event.pageX + 5)+ "px")
                     .style("top", (d3.event.pageY -28)+ "px");
             })
